TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "134539741704880" [label="Start"];
  "134539741704880" -> "134539741703680";
  "134539741703680" [label="Code"];
  "134539741703680" -> "134539741704112";
  "134539741704112" [label="Function"];
  "134539741704112" -> "134539741707616";
  "134539741704112" -> "134539741706272";
  "134539741704112" -> "134539741705456";
  "134539741707616" [label="main IDENTIFIER"];
  "134539741706272" [label="Parameters"];
  "134539741705456" [label="Code"];
  "134539741705456" -> "134539741705744";
  "134539741705456" -> "134539741708048";
  "134539741705456" -> "134539741706992";
  "134539741705744" [label="Code"];
  "134539741705744" -> "134539741703536";
  "134539741703536" [label="Declaration"];
  "134539741703536" -> "134539741706368";
  "134539741703536" -> "134539741705168";
  "134539741706368" [label="x IDENTIFIER"];
  "134539741705168" [label="1 INT"];
  "134539741708048" [label="Code"];
  "134539741708048" -> "134539741855808";
  "134539741855808" [label="Declaration"];
  "134539741855808" -> "134539741857824";
  "134539741855808" -> "134539741857872";
  "134539741857824" [label="x IDENTIFIER"];
  "134539741857872" [label="2 INT"];
  "134539741706992" [label="Return"];
  "134539741706992" -> "134539741857920";
  "134539741857920" [label="0 INT"];
}
